--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,13 @@
 
 {% block content %}
     <h1> PAN-GALACTIC-GARGLE-BLASTER </h1>
-    <p>42 42 42 42 42 42 42 42 42 42 42 42 42</p>
-
     <form>
 
         <div>
             {{ form.login_button }}
             {{ form.register_button }}
             {{ form.overview_button }}
+            {{ form.contact_button }}
         </div>
 
     </form>
