--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 
 {% block content %}
     <h1> PAN-GALACTIC-GARGLE-BLASTER </h1>
-    <form>
+
+    <form action="{{ url_for('index') }}", method="POST">
 
         <div>
             {{ form.login_button }}
@@ -12,6 +13,8 @@
             {{ form.overview_button }}
             {{ form.contact_button }}
         </div>
+
+        {{ form.csrf_token }}
 
     </form>
 {% endblock %}
