--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1> PAN-GALACTIC-GARGLE-BLASTER </h1>
 
-    <form action="{{ url_for('index') }}", method="POST">
+    <form action="{{ url_for('index') }}" method="POST" about="test">
 
         <div>
             {{ form.login_button }}
