--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,12 +6,14 @@
 
 {% block content %}
     <h1> Contact us! </h1>
-    <form>
+
+    <form action="{{ url_for('contact') }}" method="POST">
 
         <div>
             {{ displayField(form.email_field, 'Email', autofocus=true) }}
             {{ displayField(form.text_field, 'Message') }}
         </div>
+
         <div>
             {{ form.send_button }}
         </div>
