--- a/templates/error/error-404.html
+++ b/templates/error/error-404.html
@@ -1,4 +1,4 @@
-{%  extends "error-basic.html" %}
+{%  extends "error/error-basic.html" %}
 
 {% block title %}404{% endblock %}
 
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
 
 	<!-- Custom stylesheet -->
-	<link type="text/css" rel="stylesheet" href="../static/style/error-basic.css" />
+	<link type="text/css" rel="stylesheet" href="../../static/style/error-basic.css" />
 
 {% endblock %}
 
