--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,16 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} PAN-GALACTIC-GARGLE-BLASTER {% endblock %}
-
 {% block content %}
     <h1> PAN-GALACTIC-GARGLE-BLASTER </h1>
 
-    <form action="{{ url_for('index') }}" method="POST">
+    <a href="{{url_for('gallery')}}" class="z-10 w-auto px-6 mx-auto mt-10 btn btn-switch">HAVE A TASTE!</a>
 
-        <div>
-            <a class="ml-2 w-28 btn btn-secondary " href="{{url_for('userlogin')}}">Login</a>
-            <a class="ml-2 w-28 btn btn-primary " href="{{url_for('userregister')}}">Sign up</a>
-        </div>
-
-    </form>
 {% endblock %}
