--- a/templates/main/gallery.html
+++ b/templates/main/gallery.html
@@ -5,5 +5,7 @@
 {% block content %}
     <h1> Gallery </h1>
 
-
+    <div class="grid w-full max-w-sm py-6 mx-auto dash-border place-items-center {{'fade-in-slow' if animate == 'on'}}">
+        <!-- # TODO: ('upload') -->
+    </div>
 {% endblock %}
