Add some endpoints

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -18,11 +18,11 @@
         </div>
 
         <div>
-             <a href="{{url_for('userregister')}}" class="w-40 btn btn-primary">Sign Up</a>
+             <a href="{{url_for('userregister')}}" class="w-40 btn btn-primary">Register</a>
         </div>
 
         <div>
-        <!--     # TODO: (reset_password) -->
+            <a href="{{url_for('userresetpassword')}}" class="w-40 btn btn-primary">Reset Password</a>
         </div>
 
         <div>
