--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1> Contact us! </h1>
 
-    <form action="{{ url_for('contact') }}" method="POST">
+    <form action="{{ url_for('main.contact') }}" method="POST">
 
         <div>
             {% if current_user.is_authenticated %}
