--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1> Registration </h1>
 
-    <form action="{{ url_for('userregister') }}" method="POST">
+    <form action="{{ url_for('user.register') }}" method="POST">
 
         {{ displayField(form.username, 'Username', autocomplete='off', autofocus=true) }}
 
@@ -21,6 +21,6 @@
             {{ form.submit_button }}
         </div>
     </form>
-      <a href="{{url_for('userlogin')}}" class="w-40 btn btn-primary">Log In</a>
-     <a href="{{url_for('contact')}}" class="w-40 btn btn-primary">Contact us</a>
+      <a href="{{url_for('user.login')}}" class="w-40 btn btn-primary">Log In</a>
+     <a href="{{url_for('main.contact')}}" class="w-40 btn btn-primary">Contact us</a>
 {% endblock %}
