--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -15,7 +15,7 @@
 
         {{ displayField(form.password, 'Password') }}
 
-        {{ displayField(form.confirm_pwd, 'Retype Password') }}
+        {{ displayField(form.confirm_pwd, 'Confirm Password') }}
 
         <div>
             {{ form.submit_button }}
