--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
               <div class="hidden md:flex">
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('user.logout')}}">Logout</a>
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.contact')}}">Contact Us</a>
-                <a class="block mr-4 hover:text-primary-600" href="{{url_for('')}}">Upload</a>
+                <a class="block mr-4 hover:text-primary-600" href="{{url_for('drink.upload')}}">Upload</a>
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.gallery')}}">Gallery</a>
               </div>
         {% endif %}
@@ -31,7 +31,7 @@
             <a class="ml-2 w-28 btn btn-secondary " href="{{url_for('user.login')}}">Login</a>
             <a class="ml-2 w-28 btn btn-primary " href="{{url_for('user.register')}}">Register</a>
         {% else %}
-            <a class="w-28 btn btn-primary " href="{{url_for('', user_id=current_user.id)}}">My Profile</a>
+            <a class="w-28 btn btn-primary " href="{{url_for('user.profile', username=current_user.username)}}">My Profile</a>
         {% endif %}
 
         <!-- Main block -->
