--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -28,6 +28,6 @@
         <div>
              <a href="{{url_for('main.contact')}}" class="w-40 btn btn-primary">Contact Us</a>
         </div>
-
+        {{ form.csrf_token }}
     </form>
 {% endblock %}
