Test with profile pic

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="A fun web app to rate your own or friends drinks!">
+        <meta name="description" content="A fun web app to rate your own or friends memes!">
         <meta name="keywords" content="Python, Flask, Photo, Sharing, Drinks, 42">
         <meta name="author" content="Klaus Moser">
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -21,7 +21,7 @@
               <div class="hidden md:flex">
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('user.logout')}}">Logout</a>
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.contact')}}">Contact Us</a>
-                <a class="block mr-4 hover:text-primary-600" href="{{url_for('drink.upload')}}">Upload</a>
+                <a class="block mr-4 hover:text-primary-600" href="{{url_for('meme.upload')}}">Upload</a>
                 <a class="block mr-4 hover:text-primary-600" href="{{url_for('main.gallery')}}">Gallery</a>
               </div>
         {% endif %}
@@ -31,7 +31,9 @@
             <a class="ml-2 w-28 btn btn-secondary " href="{{url_for('user.login')}}">Login</a>
             <a class="ml-2 w-28 btn btn-primary " href="{{url_for('user.register')}}">Register</a>
         {% else %}
-            <a class="w-28 btn btn-primary " href="{{url_for('user.profile', username=current_user.username)}}">My Profile</a>
+            <div>
+                <a class="w-28 btn btn-primary " href="{{url_for('user.profile', username=current_user.username)}}">My Profile</a>
+            </div>
         {% endif %}
 
         <!-- Main block -->
