--- a/templates/user/select_avatar.html
+++ b/templates/user/select_avatar.html
@@ -7,7 +7,8 @@
 
     {% for avatar in avatars %}
         <div>
-            <img src="{{avatar}}" alt="" width="100" height="100">
+            <a href="{{url_for('user.select_avatar', selected_avatar=avatar)}}" >
+                <img src="{{avatar}}" alt="" width="100" height="100"></a>
         </div>
 
     {% endfor %}
