--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -3,6 +3,6 @@
 {% block content %}
     <h1> PAN-GALACTIC-GARGLE-BLASTER </h1>
 
-    <a href="{{url_for('main.gallery')}}" class="z-10 w-auto px-6 mx-auto mt-10 btn btn-switch">HAVE A TASTE!</a>
+    <a href="{{url_for('main.gallery')}}">HAVE A TASTE!</a>
 
 {% endblock %}
