--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -18,15 +18,15 @@
         </div>
 
         <div>
-             <a href="{{url_for('user.register')}}" class="w-40 btn btn-primary">Register</a>
+             <a href="{{url_for('user.register')}}">Register</a>
         </div>
 
         <div>
-            <a href="{{url_for('user.reset_password')}}" class="w-40 btn btn-primary">Reset Password</a>
+            <a href="{{url_for('user.reset_password')}}">Reset Password</a>
         </div>
 
         <div>
-             <a href="{{url_for('main.contact')}}" class="w-40 btn btn-primary">Contact Us</a>
+             <a href="{{url_for('main.contact')}}">Contact Us</a>
         </div>
         {{ form.csrf_token }}
     </form>
