--- a/templates/meme/meme.html
+++ b/templates/meme/meme.html
@@ -3,27 +3,23 @@
 {% from "form-helper.html" import displayField %}
 
 {% block head %}
-    <link rel="stylesheet" href="style/carousel.css">
-
+    <link rel="stylesheet" href="../../static/stylesheet/carousel.css">
 {% endblock %}
 
 {% block content %}
 
     <!-- Cover Flow Page -->
-
     <div class="gallery">
         <div class="gallery-container">
-            <img class="gallery-item gallery-item-1" src="images/IMG01.jpg" data-index="1">
-            <img class="gallery-item gallery-item-2" src="images/IMG02.jpg" data-index="2">
-            <img class="gallery-item gallery-item-3" src="images/IMG03.jpg" data-index="3">
-            <img class="gallery-item gallery-item-4" src="images/IMG04.jpg" data-index="4">
-            <img class="gallery-item gallery-item-5" src="images/IMG05.jpg" data-index="5">
+            <img class="gallery-item gallery-item-1" src="../static/images/IMG01.jpg" data-index="1">
+            <img class="gallery-item gallery-item-2" src="../static/images/IMG02.jpg" data-index="2">
+            <img class="gallery-item gallery-item-3" src="../static/images/IMG03.jpg" data-index="3">
+            <img class="gallery-item gallery-item-4" src="../static/images/IMG04.jpg" data-index="4">
+            <img class="gallery-item gallery-item-5" src="../static/images/IMG05.jpg" data-index="5">
         </div>
         <div class="gallery-controls"></div>
     </div>
 
-    <script src="scripts/carousel.js"></script>
-
-
+    <script src="../static/scripts/carousel.js"></script>
 
 {% endblock %}
