--- a/static/stylesheet/carousel.css
+++ b/static/stylesheet/carousel.css
@@ -20,14 +20,14 @@
   z-index: 0;
 }
 
-.gallery-item-1 {
+.gallery-item-4 {
   left: 15%;
   opacity: .4;
   transform: translateX(-50%);
 }
 
 .gallery-item-2,
-.gallery-item-4 {
+.gallery-item-3 {
   height: 200px;
   opacity: 1;
   width: 200px;
@@ -39,17 +39,17 @@
   transform: translateX(-50%);
 }
 
-.gallery-item-3 {
+.gallery-item-1 {
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  height: 300px;
+  height: 100%;
+  width: auto;
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
-  width: 300px;
   z-index: 2;
 }
 
-.gallery-item-4 {
+.gallery-item-3 {
   left: 70%;
   transform: translateX(-50%);
 }
