--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -39,8 +39,8 @@
     {% else %}
         {% for meme in memes %}
             <div>
-                <a href=" {{url_for('meme.meme_page', selected_meme=meme)}} " >
-                    <img src="{{ meme }}" alt="" width="200" height="200"/></a>
+                <a href=" {{url_for('meme.meme_page', selected_meme=meme.id)}} " >
+                    <img src="{{ meme.img_url }}" alt="" width="200" height="200"/></a>
             </div>
         {% endfor %}
     {% endif %}
