--- a/static/stylesheet/carousel.css
+++ b/static/stylesheet/carousel.css
@@ -39,6 +39,32 @@
   transform: translateX(-50%);
 }
 
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.gallery-container:hover .gallery-item-1 {
+  opacity: 0.3;
+}
+
+.gallery-container:hover .middle {
+  opacity: 1;
+}
+
 .gallery-item-1 {
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
   height: 100%;
@@ -47,6 +73,9 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 2;
+  display: block;
+  backface-visibility: hidden;
+  transition: .5s ease;
 }
 
 .gallery-item-3 {
