--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -44,12 +44,12 @@
         {% for meme in memes %}
             <div class="container">
                 <a href=" {{url_for('meme.meme_page', selected_meme=meme.id)}} " >
-                    <img src="{{ meme.img_url }}" alt="" class="image" width="300" height="300"/></a>
-                <div class="middle">
+                    <img src="{{ meme.img_url }}" alt="" class="image"/>
+                <div class="middle" >
                     <div class="text">Name: {{ meme.meme_name }}</div>
                     <div class="text">Genre: {{ meme.genre }}</div>
                     <div class="text">Upload: {{ meme.upload_date }}</div>
-                </div>
+                </div></a>
             </div>
         {% endfor %}
     {% endif %}
