--- a/templates/meme/meme.html
+++ b/templates/meme/meme.html
@@ -15,7 +15,9 @@
             {% for meme in memes %}
                 <img class="gallery-item gallery-item-{{ loop.index }}" src="{{ meme.img_url }}" data-index="{{ loop.index }}" alt="Image Error">
                     <div class="middle">
-                        <div class="text">{{ meme.meme_name }}</div>
+                        <div class="text">Name: {{ meme.meme_name }}</div>
+                        <div class="text">Genre: {{ meme.genre }}</div>
+                        <div class="text">Upload: {{ meme.upload_date }}</div>
                     </div>
             {% endfor %}
         
