--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -3,7 +3,7 @@
 {% from "form-helper.html" import displayField %}
 
 {% block head %}
-    <link rel="stylesheet" href="../../static/stylesheet/meme.css">
+    <link rel="stylesheet" href="../../static/stylesheet/meme_card.css">
 {% endblock %}
 
 {% block content %}
