--- a/static/stylesheet/carousel.css
+++ b/static/stylesheet/carousel.css
@@ -20,16 +20,16 @@
   z-index: 0;
 }
 
-.gallery-item-4 {
+.gallery-item-1 {
   left: 15%;
   opacity: .4;
   transform: translateX(-50%);
 }
 
 .gallery-item-2,
-.gallery-item-3 {
+.gallery-item-4 {
   height: 200px;
-  opacity: .6;
+  opacity: 1;
   width: 200px;
   z-index: 1;
 }
@@ -39,46 +39,17 @@
   transform: translateX(-50%);
 }
 
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.text {
-  background-color: #4CAF50;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}
-
-.gallery-container:hover .gallery-item-1 {
-  opacity: 0.3;
-}
-
-.gallery-container:hover .middle {
-  opacity: 1;
-}
-
-.gallery-item-1 {
+.gallery-item-3 {
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
-  height: 100%;
-  width: auto;
+  height: 300px;
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
+  width: 300px;
   z-index: 2;
-  display: block;
-  backface-visibility: hidden;
-  transition: .5s ease;
 }
 
-.gallery-item-3 {
+.gallery-item-4 {
   left: 70%;
   transform: translateX(-50%);
 }
