--- a/templates/meme/meme_card.html
+++ b/templates/meme/meme_card.html
@@ -1,5 +1,5 @@
 <!-- meme_card -->
-<img class="image" src="{{ meme.img_url }}" alt=""/>
+<img class="{{ gallery }} gallery-item gallery-item-{{ item }}" src="{{ meme.img_url }}" data-index="{{ item }}" alt=""/>
 <div class="middle">
     <div class="text">Name: {{ meme.meme_name }}</div>
     <div class="text">Genre: {{ meme.genre }}</div>
