--- a/static/stylesheet/meme_card.css
+++ b/static/stylesheet/meme_card.css
@@ -1,41 +1,8 @@
-.container {
-  position: relative;
-  width: 50%;
+.blur img{
+transition: 0.3s ease;
 }
 
-.image {
-  opacity: 1;
-  display: block;
-  width: 100%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
+.blur img:hover{
+-webkit-filter: blur(5px);
+transition: 0.3s ease;
 }
-
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.container:hover .image {
-  opacity: 0.3;
-}
-
-.container:hover .middle {
-  opacity: 0.8;
-}
-
-.text {
-  background-color: rgb(32, 125, 32);
-  color: white;
-  font-size: 28px;
-  padding: 16px 32px;
-  font-family: 'Ubuntu', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
-}
-
