--- a/templates/user/edit_profile.html
+++ b/templates/user/edit_profile.html
@@ -9,8 +9,8 @@
     <form action="{{ url_for('user.edit_profile', user_id=user.id)}}" method="POST">
 
         <div>
-            {{ displayField(form.username_field, 'Username') }}
-            {{ displayField(form.email_field, 'Email') }}
+            {{ displayField(form.username, 'Username') }}
+            {{ displayField(form.email, 'Email') }}
         </div>
 
         <div>
