--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="description" content="A fun web app to rate your own or friends memes!">
         <meta name="keywords" content="Python, Flask, Photo, Sharing, Drinks, 42">
         <meta name="author" content="Klaus Moser">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
         {%  block head %}
         {% endblock %}
