--- a/templates/meme/meme_card.html
+++ b/templates/meme/meme_card.html
@@ -3,15 +3,18 @@
 {% endblock %}
 
 <!-- meme_card -->
-<div class="blur">
+<div class="meme-container">
     <a href=" {{url_for('meme.meme_page', selected_meme=meme.id)}} " >
         <img class="image" src="{{ meme.img_url }}" width="200" alt=""/>
-    </a>
-    <div class="info-text">
-        <div class="text">Name: {{ meme.meme_name }}</div>
-        <div class="text">Genre: {{ meme.genre }}</div>
-        <div class="text">Upload: {{ meme.upload_date }}</div>
+
+    <div class="text-container">
+        <div class="text">
+            Name: {{ meme.meme_name }}
+            Genre: {{ meme.genre }}
+            Upload: {{ meme.upload_date }}
+        </div>
     </div>
+    </a>
 </div>
 
 {% if meme.owner_id == current_user.id %}
