Temporary integration also into meme.html

--- a/templates/meme/meme.html
+++ b/templates/meme/meme.html
@@ -9,6 +9,7 @@
     MEME PAGE
     </h1>
 
-    <img src="{{ meme.img_url }}" width=80% alt="Error"/>
+    <!-- <img src="{{ meme.img_url }}" width=80% alt="Error"/> -->
+    {% include 'meme/meme_card.html' %}
 
 {% endblock %}
