--- a/templates/meme/meme_card.html
+++ b/templates/meme/meme_card.html
@@ -5,7 +5,7 @@
 <!-- meme_card -->
 <div class="meme-container">
     <a href=" {{url_for('meme.meme_page', selected_meme=meme.id)}} " >
-        <img class="image" src="{{ meme.img_url }}" width="200" alt=""/>
+        <img class="image" src="{{ meme.img_url }}" alt=""/>
 
     <div class="text-container">
         <div class="text">
